--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Alex Bowers Schoen</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  </head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div class="card">
+    <h1>Alex Bowers Schoen</h1>
+    <div><a href="resumes/index/html">Resume</a></div>
+  <div>
 </body>
 </html>
