colors, fonts, spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="card">
     <h1>Alex Bowers Schoen</h1>
-    <div><a href="resumes/index/html">Resume</a></div>
+    <div><a href="resume/index.html">Resume</a></div>
   <div>
 </body>
 </html>
