--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="resume">
       <div class="card">
-        <header class="">
+        <header class="basic-info">
           <h1>Alex Bowers Schoen</h1>
           <div class="job-title">Engineering Lead</div>
           <div class="contact-info">Decatur, GA</div>
@@ -20,16 +20,18 @@
         </header>
       </div>
       <div class="card">
-        <h2>Education</h2>
-        <div class="school">
-          <h3>Rose-Hulman Institute of Tecnology</h3>
-          <div class="degree">B.S. Computer Science and Software Engineering</div>
-          <div class="dates">1999-2003</div>
-        </div>
-        <div class="school">
-          <h3>Rose-Hulman Institute of Tecnology</h3>
-          <div class="degree">Master's in Computer Science</div>
-          <div class="dates">2014-2017 (Estimated Graduation)</div>
+        <div class="education">
+          <h2>Education</h2>
+          <div class="school">
+            <h3>Rose-Hulman Institute of Tecnology</h3>
+            <div class="degree">B.S. Computer Science and Software Engineering</div>
+            <div class="dates">1999-2003</div>
+          </div>
+          <div class="school">
+            <h3>Georgia Institute of Technology</h3>
+            <div class="degree">Master's in Computer Science</div>
+            <div class="dates">2014-2017 (Estimated Graduation)</div>
+          </div>
         </div>
       </div>
     </div>
