space for school examples

--- a/graduate/index.html
+++ b/graduate/index.html
@@ -11,9 +11,9 @@
   <div class="card">
     <h1>Alex Bowers Schoen</h1>
     <div class="horiz-links">
-      <span><a href="resume/index.html">Resume</a></span>
+      <span><a href="resume/index.html">Example 1</a></span>
       <span class="sep">|</span>
-      <span><a href="graduate/index.html">Graduate School Examples</a></span>
+      <span><a href="graduate/index.html">Example 2</a></span>
     </div>
   <div>
 </body>
