--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
     <link href="../assets/css/global.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
   </head>
@@ -19,18 +19,30 @@
           <div class="contact-info">Decatur, GA</div>
         </header>
       </div>
+
+      <div class="card">
+        <div class="experience">
+          <h2>Experience</h2>
+          <div class="job">
+            <h3>CareerBuilder</h3>
+            <div class="dates"><i>December 2013 - present</i></div>
+            <div class="job-title">Engineering Lead</div>
+          </div>
+        </div>
+      </div>
+
       <div class="card">
         <div class="education">
           <h2>Education</h2>
           <div class="school">
             <h3>Rose-Hulman Institute of Tecnology</h3>
+            <div class="dates"><i>1999-2003</i></div>
             <div class="degree">B.S. Computer Science and Software Engineering</div>
-            <div class="dates">1999-2003</div>
           </div>
           <div class="school">
             <h3>Georgia Institute of Technology</h3>
+            <div class="dates"><i>2014-2017 (Estimated Graduation)</i></div>
             <div class="degree">Master's in Computer Science</div>
-            <div class="dates">2014-2017 (Estimated Graduation)</div>
           </div>
         </div>
       </div>
