--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
           <h1>Alex Bowers Schoen</h1>
           <div class="job-title">Engineering Lead</div>
           <div class="contact-info">Decatur, GA</div>
-          <div class="contact-info">Decatur, GA</div>
+          <div class="contact-info"><a href="https://twitter.com/Palila">@Palila</a></div>
         </header>
       </div>
 
@@ -24,9 +24,41 @@
         <div class="experience">
           <h2>Experience</h2>
           <div class="job">
-            <h3>CareerBuilder</h3>
-            <div class="dates"><i>December 2013 - present</i></div>
-            <div class="job-title">Engineering Lead</div>
+            <div class="job-overview">
+              <h3>CareerBuilder</h3>
+              <div class="dates"><i>December 2013 - present</i></div>
+              <div class="job-title">Engineering Lead</div>
+            </div>
+          </div>
+
+        <div class="job">
+          <div class="job-overview">
+            <h3>The Home Depot</h3>
+            <div class="dates"><i>January 2010 - November 2013</i></div>
+            <div class="job-title">IT Developer II</div>
+          </div>
+          <div class="job-details">
+            <ul>
+              <li>Major projects:</li>
+              <ul>
+                <li class="work-item"><i>Appointment Maker</i>: an online tool that allows customers to make in-store appointments through the homedepot.com website, and an in-store tool that allows associates to manage their own appointments during their working hours</li>
+                <li class="work-item"><i>My Kitchen Planner</i>: an online kitchen collaboration tool that facilitates the collaboration between customers and in-store kitchen designers by allowing them to share documents, pictures, 3D kitchen designs, and messages</li>
+                <li class="work-item"><i>My Kitchen Planner Canada</i>: an expansion of My Kitchen Planner for use in the Canadian market that shares the same code base as My Kitchen Planner
+              </ul>
+
+              <li>On all projects:</li>
+              <ul>
+                <li class="work-item">Met with both upper-level management and store-level associates to develop reasonable requirements and documentation for projects</li>
+                <li class="work-item">Collaborated with internal .com, .ca, and Customer Experience teams, translators, and outside vendors to develop and then implement customer-facing UI to ensure seamless transition from homedepot.com and homedepot.ca to our applications</li>
+                <li class="work-item">Coordinated major software deployments for my applications with .com team when large site changes occurred</li>
+                <li class="work-item">Created and presented page mock-ups for approval by stakeholders</li>
+                <li class="work-item">Followed the internal style guide to build in-store applications, then cross-checked functionality—including input field verification, error messages, and data presentation—with existing in-store applications</li>
+                <li class="work-item">Participated in QA testing, working to make fixes as needed to improve performance and functionality, on my code and other developer’s</li>
+                <li class="work-item">Trained store associates on how to use these tools, provided technical assistance, and made improvements to the applications based on user feedback</li>
+                <li class="work-item">Answered aggressive deadlines, communicating with managers when changes to schedules or additional people were necessary</li>
+                <li class="work-item">Led code reviews, made recommendations for improvement in structure and maintainability, mentored new hires in good coding practices and helped them to learn the languages and tools, making them useful on projects quickly</li>
+              </ul>
+            </ul>
           </div>
         </div>
       </div>
@@ -41,7 +73,7 @@
           </div>
           <div class="school">
             <h3>Georgia Institute of Technology</h3>
-            <div class="dates"><i>2014-2017 (Estimated Graduation)</i></div>
+            <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
             <div class="degree">Master's in Computer Science</div>
           </div>
         </div>
