moving things around

--- a/graduate/index.html
+++ b/graduate/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
   </head>
 
 <body>
@@ -12,7 +12,6 @@
     <h1>Alex Bowers Schoen</h1>
     <div class="horiz-links">
       <span><a href="resume/index.html">Example 1</a></span>
-      <span class="sep">|</span>
       <span><a href="graduate/index.html">Example 2</a></span>
     </div>
   <div>
