--- a/resume/index.html
+++ b/resume/index.html
@@ -15,8 +15,10 @@
         <header class="basic-info">
           <h1>Alex Bowers Schoen</h1>
           <div class="job-title">Engineering Lead</div>
-          <div class="contact-info">Decatur, GA</div>
-          <div class="contact-info"><a href="https://twitter.com/Palila">@Palila</a></div>
+          <div class="horiz-links">
+            <span class="contact-info">Decatur, GA</span>
+            <span class="contact-info"><a href="https://twitter.com/Palila">@Palila</a></span>
+          </div>
         </header>
       </div>
 
@@ -26,16 +28,16 @@
           <div class="job">
             <div class="job-overview">
               <h3>CareerBuilder</h3>
-              <div class="dates"><i>December 2013 - present</i></div>
               <div class="job-title">Engineering Lead</div>
+              <div class="dates"><i>December 2013 - present</i></div>
             </div>
           </div>
 
           <div class="job">
             <div class="job-overview">
               <h3>The Home Depot</h3>
-              <div class="dates"><i>January 2010 - November 2013</i></div>
               <div class="job-title">IT Developer II</div>
+              <div class="dates"><i>January 2010 - November 2013</i></div>
             </div>
             <div class="job-details">
               <ul>
@@ -69,13 +71,13 @@
           <h2>Education</h2>
           <div class="school">
             <h3>Rose-Hulman Institute of Tecnology</h3>
-            <div class="dates"><i>1999-2003</i></div>
             <div class="degree">B.S. Computer Science and Software Engineering</div>
+            <div class="dates"><i>1999-2003</i></div>
           </div>
           <div class="school">
             <h3>Georgia Institute of Technology</h3>
-            <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
             <div class="degree">Master's in Computer Science</div>
+            <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
           </div>
         </div>
       </div>
