--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,19 @@
             <div class="job-overview">
               <h3>CareerBuilder</h3>
               <div class="dates"><i>December 2013 - present</i></div>
-              <div class="job-title">Engineering Lead</div>
+              <div class="job-title">Engineering Lead in Consumer Web Development</div>
+              <div class="previous-titles"></div>
+              <div>Previous Titles</div>
+
+                <div class="horiz-links">
+                  Software Engineer III
+                  May 2015 - Dec 2015
+                </div>
+                <div class="horiz-links">
+                  Software Engineer II
+                  Dec 2013 - May 2014
+                </div>
+              </div>
             </div>
           </div>
 
