--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
+
+    <meta name="description" content="Alex Bowers Schoen - a web developer">
+    <meta name="keywords" content="web,developer,ruby,rails,resume" />
+    <meta name="author" content="Alex Bowers Schoen">
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
     <link href="../assets/css/global.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
@@ -29,19 +34,28 @@
             <div class="job-overview">
               <h3>CareerBuilder</h3>
               <div class="dates"><i>December 2013 - present</i></div>
+              <div class="location">Atlanta, GA</div>
               <div class="job-title">Engineering Lead in Consumer Web Development</div>
               <div class="previous-titles"></div>
               <div>Previous Titles</div>
-
                 <div class="horiz-links">
-                  Software Engineer III
-                  May 2015 - Dec 2015
+                  <span>Software Engineer III</span>
+                  <span>May 2015 - Dec 2015</span>
                 </div>
                 <div class="horiz-links">
-                  Software Engineer II
-                  Dec 2013 - May 2014
+                  <span>Software Engineer II</span>
+                  <span>Dec 2013 - May 2014</span>
                 </div>
               </div>
+            </div>
+            <div class="job-details">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
             </div>
           </div>
 
@@ -49,6 +63,7 @@
             <div class="job-overview">
               <h3>The Home Depot</h3>
               <div class="dates"><i>January 2010 - November 2013</i></div>
+              <div class="location">Atlanta, GA</div>
               <div class="job-title">IT Developer II</div>
             </div>
             <div class="job-details">
@@ -76,20 +91,21 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="card">
-        <div class="education">
-          <h2>Education</h2>
-          <div class="school">
-            <h3>Rose-Hulman Institute of Tecnology</h3>
-            <div class="dates"><i>1999-2003</i></div>
-            <div class="degree">B.S. Computer Science and Software Engineering</div>
-          </div>
-          <div class="school">
-            <h3>Georgia Institute of Technology</h3>
-            <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
-            <div class="degree">Master's in Computer Science</div>
+        <div class="card">
+          <div class="education">
+            <h2>Education</h2>
+            <div class="school">
+              <h3>Georgia Institute of Technology</h3>
+              <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
+              <div class="degree">Master's in Computer Science</div>
+            </div>
+            <div class="school">
+              <h3>Rose-Hulman Institute of Technology</h3>
+              <div class="dates"><i>1999-2003</i></div>
+              <div class="degree">B.S. Computer Science and Software Engineering</div>
+              <div class="degree">Minor in Japanese Language</div>
+            </div>
           </div>
         </div>
       </div>
