Add and use foundation

--- a/graduate/index.html
+++ b/graduate/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="card">
     <h1>Alex Bowers Schoen</h1>
-    <div class="horiz-links">
+    <div class="horiz-items">
       <span><a href="resume/index.html">Example 1</a></span>
       <span><a href="graduate/index.html">Example 2</a></span>
     </div>
