--- a/resume/index.html
+++ b/resume/index.html
@@ -5,107 +5,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
 
-    <meta name="description" content="Alex Bowers Schoen - a web developer">
+    <meta name="description" content="Alex Bowers Schoen - Software Engineer with over 10 years of experience in a range of technologies">
     <meta name="keywords" content="web,developer,ruby,rails,resume" />
     <meta name="author" content="Alex Bowers Schoen">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
     <link href="../assets/css/global.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/foundation.min.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <div class="resume">
-      <div class="card">
-        <header class="basic-info">
-          <h1>Alex Bowers Schoen</h1>
-          <div class="job-title">Engineering Lead</div>
-          <div class="horiz-links">
+    <div class="resume row">
+      <div class="card small-12 columns">
+        <header class="basic-info row">
+          <div class="small-12 large-6 columns">
+            <h1><span>Alex Bowers Schoen</span></h1>
+          </div>
+           <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info">Decatur, GA</span>
             <span class="contact-info"><a href="https://twitter.com/Palila">@Palila</a></span>
+            <span class="contact-info"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
+          
+          <div class="job-title small-12 columns">Software Engineer with over 10 years of experience in a range of technologies</div>
+         
         </header>
       </div>
 
-      <div class="card">
-        <div class="experience">
-          <h2>Experience</h2>
+      <div class="card small-12 columns">
+        <div class="experience row">
+          <div class="small-12 columns">
+            <h2>Current Experience</h2>
+          </div>
           <div class="job">
             <div class="job-overview">
-              <h3>CareerBuilder</h3>
-              <div class="dates"><i>December 2013 - present</i></div>
-              <div class="location">Atlanta, GA</div>
-              <div class="job-title">Engineering Lead in Consumer Web Development</div>
-              <div class="previous-titles"></div>
-              <div>Previous Titles</div>
-                <div class="horiz-links">
-                  <span>Software Engineer III</span>
-                  <span>May 2015 - Dec 2015</span>
-                </div>
-                <div class="horiz-links">
-                  <span>Software Engineer II</span>
-                  <span>Dec 2013 - May 2014</span>
-                </div>
+              <div class="employer-info small-12 large-6 columns">
+                <h3><span>CareerBuilder</span></h3>
               </div>
-            </div>
-            <div class="job-details">
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
+              <div class="location small-12 medium-6 large-2 columns">Norcross, GA</div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
+              <div class="small-12 columns">
+                <h4 class="job-title">Engineering Lead in Consumer Web Development</h4>
+              </div>
+
+              <section class="previous-titles">
+                <div class="small-12 columns">Previous Titles</div>
+                <div class="small-12 columns">
+                  <ul>
+                    <li>
+                      <span class="horiz-items">
+                        <span>Software Engineer III</span>
+                        <span>May 2015 - Dec 2015</span>
+                      </span>
+                    </li>
+                    <li>
+                      <span class="horiz-items">
+                        <span>Software Engineer II</span>
+                        <span>Dec 2013 - May 2014</span>
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+              </section>
+
+            </div>  
           </div>
 
+          <div class="job-details small-12 columns">
+            <div><b>Things that I did</b></div>
+            <ul>
+              <li>Led the team of Engineers to do a whole lot of things</li>
+              <li>JDP Conversion</li>
+              <li>JRP Conversion</li>
+              <li>Updating old JRP</li>
+              <li>Led team for a year before getting title</li>
+              <li>Meeting with Product Owners (including Chief Product Owner) to determine feasibility and scope of work</li>
+              <li>Working with developers to break down work in to manageable, devliverable, iterable chunks of work</li>
+              <li>Checking user reports, GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
+              <li></li>
+              <li>On the SEO Team</li>
+              <li>Only developer, grew the team of developers</li>
+              <li>Part of major decisions, like url structure</li>
+              <li>Got us to the first page of Google with changes</li>
+              <li>Hired, mentored intern</li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="card small-12 columns">
+        <div class="experience row">
+          <div class="small-12 columns">
+            <h2>Previous Experience</h2>
+          </div>
           <div class="job">
             <div class="job-overview">
-              <h3>The Home Depot</h3>
-              <div class="dates"><i>January 2010 - November 2013</i></div>
-              <div class="location">Atlanta, GA</div>
-              <div class="job-title">IT Developer II</div>
+              <div class="employer-info small-12 large-6 columns">
+                <h3><span>The Home Depot</span></h3>
+              </div>
+              <div class="location small-12 medium-6 large-2 columns">Atlanta, GA</div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>January 2010 - November 2013</i></div>
+              <div class="small-12 columns">
+                <h4 class="job-title">IT Developer II</h4>
+              </div>
             </div>
-            <div class="job-details">
+            <div class="job-details small-12 columns">
+              <div><b>Major projects:</b></div>
               <ul>
-                <li>Major projects:</li>
-                <ul>
-                  <li class="work-item"><i>Appointment Maker</i>: an online tool that allows customers to make in-store appointments through the homedepot.com website, and an in-store tool that allows associates to manage their own appointments during their working hours</li>
-                  <li class="work-item"><i>My Kitchen Planner</i>: an online kitchen collaboration tool that facilitates the collaboration between customers and in-store kitchen designers by allowing them to share documents, pictures, 3D kitchen designs, and messages</li>
-                  <li class="work-item"><i>My Kitchen Planner Canada</i>: an expansion of My Kitchen Planner for use in the Canadian market that shares the same code base as My Kitchen Planner
-                </ul>
+                <li class="work-item"><i>Appointment Maker</i>: an online tool that allows customers to make in-store appointments through the homedepot.com website, and an in-store tool that allows associates to manage their own appointments during their working hours</li>
+                <li class="work-item"><i>My Kitchen Planner</i>: an online kitchen collaboration tool that facilitates the collaboration between customers and in-store kitchen designers by allowing them to share documents, pictures, 3D kitchen designs, and messages</li>
+                <li class="work-item"><i>My Kitchen Planner Canada</i>: an expansion of My Kitchen Planner for use in the Canadian market that shares the same code base as My Kitchen Planner
+              </ul>
 
-                <li>On all projects:</li>
-                <ul>
-                  <li class="work-item">Met with both upper-level management and store-level associates to develop reasonable requirements and documentation for projects</li>
-                  <li class="work-item">Collaborated with internal .com, .ca, and Customer Experience teams, translators, and outside vendors to develop and then implement customer-facing UI to ensure seamless transition from homedepot.com and homedepot.ca to our applications</li>
-                  <li class="work-item">Coordinated major software deployments for my applications with .com team when large site changes occurred</li>
-                  <li class="work-item">Created and presented page mock-ups for approval by stakeholders</li>
-                  <li class="work-item">Followed the internal style guide to build in-store applications, then cross-checked functionality—including input field verification, error messages, and data presentation—with existing in-store applications</li>
-                  <li class="work-item">Participated in QA testing, working to make fixes as needed to improve performance and functionality, on my code and other developer’s</li>
-                  <li class="work-item">Trained store associates on how to use these tools, provided technical assistance, and made improvements to the applications based on user feedback</li>
-                  <li class="work-item">Answered aggressive deadlines, communicating with managers when changes to schedules or additional people were necessary</li>
-                  <li class="work-item">Led code reviews, made recommendations for improvement in structure and maintainability, mentored new hires in good coding practices and helped them to learn the languages and tools, making them useful on projects quickly</li>
-                </ul>
+              <div><b>On all projects:</b></div>
+              <ul>
+                <li class="work-item">Met with both upper-level management and store-level associates to develop reasonable requirements and documentation for projects</li>
+                <li class="work-item">Collaborated with internal .com, .ca, and Customer Experience teams, translators, and outside vendors to develop and then implement customer-facing UI to ensure seamless transition from homedepot.com and homedepot.ca to our applications</li>
+                <li class="work-item">Coordinated major software deployments for my applications with .com team when large site changes occurred</li>
+                <li class="work-item">Created and presented page mock-ups for approval by stakeholders</li>
+                <li class="work-item">Followed the internal style guide to build in-store applications, then cross-checked functionality—including input field verification, error messages, and data presentation—with existing in-store applications</li>
+                <li class="work-item">Participated in QA testing, working to make fixes as needed to improve performance and functionality, on my code and other developer’s</li>
+                <li class="work-item">Trained store associates on how to use these tools, provided technical assistance, and made improvements to the applications based on user feedback</li>
+                <li class="work-item">Answered aggressive deadlines, communicating with managers when changes to schedules or additional people were necessary</li>
+                <li class="work-item">Led code reviews, made recommendations for improvement in structure and maintainability, mentored new hires in good coding practices and helped them to learn the languages and tools, making them useful on projects quickly</li>
               </ul>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="card">
-          <div class="education">
+      <div class="card small-12 columns">
+        <div class="education row">
+          <div class="small-12 columns">
             <h2>Education</h2>
-            <div class="school">
-              <h3>Georgia Institute of Technology</h3>
-              <div class="dates"><i>2014-2018 (Estimated Graduation)</i></div>
-              <div class="degree">Master's in Computer Science</div>
+          </div>
+          <div class="school">
+            <div class="small-12 large-6 columns">
+              <h3><span>Georgia Institute of Technology</span></h3>
             </div>
-            <div class="school">
-              <h3>Rose-Hulman Institute of Technology</h3>
-              <div class="dates"><i>1999-2003</i></div>
-              <div class="degree">B.S. Computer Science and Software Engineering</div>
-              <div class="degree">Minor in Japanese Language</div>
+            <div class="small-12 medium-6 large-2 columns">Atlanta, GA</div>
+            <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Estimated Graduation)</i></div>
+            <div class="degree small-12 columns">Master's in Computer Science</div>
             </div>
+          </div>
+          <hr>
+          <div class="school">
+            <div class="small-12 large-6 columns">
+              <h3><span>Rose-Hulman Institute of Technology</span></h3>
+            </div>
+            <div class="small-12 medium-6 large-2 columns">Terre Haute, IN</div>
+            <div class="dates small-12 medium-6 large-4 columns"><i>1999-2003</i></div>
+            <div class="degree small-12 columns">B.S. Computer Science and Software Engineering</div>
+            <div class="degree small-12 columns">Minor in Japanese Language</div>
           </div>
         </div>
       </div>
