--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="card">
     <h1>Alex Bowers Schoen</h1>
-    <div class="horiz-links">
+    <div class="horiz-items">
       <span><a href="resume/index.html">Resume</a></span>
       <span><a href="graduate/index.html">Graduate School Examples</a></span>
     </div>
