--- a/index.html
+++ b/index.html
@@ -4,16 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
+    <link href="assets/css/global.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/foundation.min.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
-  <div class="card">
-    <h1>Alex Bowers Schoen</h1>
-    <div class="horiz-items">
-      <span><a href="resume/index.html">Resume</a></span>
-      <span><a href="graduate/index.html">Graduate School Examples</a></span>
+  <div class="row large-uncollapse">
+    <div class="card small-12 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h1>Alex Bowers Schoen</h1>
+        </div>
+        <div class="horiz-items small-12 columns">
+          <span><a href="resume/index.html">Resume</a></span>
+          <span><a href="graduate/index.html">Graduate School Examples</a></span>
+        </div>
+      </div>
     </div>
-  <div>
+  </div>
+
+  <div class="large-uncollapse row ">
+    <div class="card tile small-12 medium-3 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>Here's another card</h2>
+        </div>
+        <div class="small-12 columns">
+          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
+          <br>
+          I'm mostly filling this out right now to take up some space. Wooo, space!
+          <br>
+          Here's a link to my resume
+          <hr>
+          <a href="resume/index.html">Resume</a>
+        </div>
+      </div>
+    </div>
+    <div class="card tile small-12 medium-5 medium-offset-2 large-3 large-offset-1 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>Here's another card</h2>
+        </div>
+        <div class="small-12 columns">
+          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
+          <br>
+          I'm mostly filling this out right now to take up some space. Wooo, space!
+          <br>
+          Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
+          <hr>
+          <a href="graduate/index.html">Graduate School Examples</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card tile small-12 medium-5 large-3 large-offset-1 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>Here's another card</h2>
+        </div>
+        <div class="small-12 columns">
+          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
+          <br>
+          I'm mostly filling this out right now to take up some space. Wooo, space!
+          <br>
+          Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
+          <hr>
+          <a href="graduate/index.html">Graduate School Examples</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card tile small-12 medium-5 medium-offset-2 large-3 large-offset-0 end columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>Here's another card</h2>
+        </div>
+        <div class="small-12 columns">
+          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
+          <br>
+          I'm mostly filling this out right now to take up some space. Wooo, space!
+          <br>
+          Here's a link to my resume
+          <hr>
+          <a href="resume/index.html">Resume</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
