--- a/graduate/index.html
+++ b/graduate/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Alex Bowers Schoen</title>
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
+    <link href="../assets/css/global.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/foundation.min.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
-  <div class="card">
-    <h1>Alex Bowers Schoen</h1>
-    <div class="horiz-items">
-      <span><a href="resume/index.html">Example 1</a></span>
-      <span><a href="graduate/index.html">Example 2</a></span>
+  <div class="row">
+    <div class="card small-12 columns">
+      <div class="row">
+        <div class="small-12">
+          <h1>Alex Bowers Schoen</h1>
+        </div>
+        <div class="horiz-items small-12 columns">
+          <span><a href="resume/index.html">Example 1</a></span>
+          <span><a href="graduate/index.html">Example 2</a></span>
+        </div>
+      </div>
     </div>
-  <div>
+  </div>
 </body>
 </html>
