--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <h1>Alex Bowers Schoen</h1>
         </div>
         <div class="horiz-items small-12 columns">
-          <span><a href="resume/index.html">Resume</a></span>
-          <span><a href="graduate/index.html">Graduate School Examples</a></span>
+          <span><a href="resume">Resume</a></span>
+          <span><a href="graduate">Graduate School Examples</a></span>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
           <br>
           Here's a link to my resume
           <hr>
-          <a href="resume/index.html">Resume</a>
+          <a href="resume">Resume</a>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
           <br>
           Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
           <hr>
-          <a href="graduate/index.html">Graduate School Examples</a>
+          <a href="graduate">Graduate School Examples</a>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
           <br>
           Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
           <hr>
-          <a href="graduate/index.html">Graduate School Examples</a>
+          <a href="graduate/">Graduate School Examples</a>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
           <br>
           Here's a link to my resume
           <hr>
-          <a href="resume/index.html">Resume</a>
+          <a href="resume">Resume</a>
         </div>
       </div>
     </div>
