adding more information

--- a/resume/index.html
+++ b/resume/index.html
@@ -73,7 +73,7 @@
           </div>
 
           <div class="job-details small-12 columns">
-            <div><b>Things that I did</b></div>
+            <div><b>Things that I did - still working on this</b></div>
             <ul>
               <li>Led the team of Engineers to do a whole lot of things</li>
               <li>JDP Conversion</li>
@@ -88,9 +88,29 @@
               <li>Only developer, grew the team of developers</li>
               <li>Part of major decisions, like url structure</li>
               <li>Got us to the first page of Google with changes</li>
-              <li>Hired, mentored intern</li>
+              <li>Hired, mentored seasonal intern</li>
               <li></li>
             </ul>
+          </div>
+
+          <hr>
+
+          <div class="job-details small-12 columns">
+            <div><b>Awards (Do I need this section?)</b></div>
+            <ul>
+              <li>Won several company-sponsored Hacakthons</li>
+              <ul>
+                <li>The project that gave people without expensive licenses the ability to read Mingle cards</li>
+                <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later)</li>
+                <li>Local search (maps on the job results page!)</li>
+                <li>A tool that gives us visibility into relevancy improvements, to compare against the current results, and a second project that actually made relevancy improvements (2 projects won at the same event)</li>
+              </ul>
+              <li>2015 Diamond Club winner - the highest award that CareerBuilder gives</li>
+              <li>Mentored girls in our High School Intern program</li>
+              <li>Organized World Cup viewing meetings.</li>
+              <li>Speaker at <a href="https://www.alterconf.com/speakers/alexandra-bowers-schoen">Atlanta AlterConf 2015</a> (shouldn't go in this section, move it)</li>
+            </ul>
+
           </div>
         </div>
       </div>
@@ -100,6 +120,7 @@
           <div class="small-12 columns">
             <h2>Education</h2>
           </div>
+
           <div class="school">
             <div class="small-12 large-6 columns">
               <h3><span>Georgia Institute of Technology</span></h3>
@@ -108,7 +129,9 @@
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Estimated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
           </div>
+
           <hr>
+          
           <div class="school">
             <div class="small-12 large-6 columns">
               <h3><span>Rose-Hulman Institute of Technology</span></h3>
@@ -126,6 +149,7 @@
           <div class="small-12 columns">
             <h2>Previous Experience</h2>
           </div>
+
           <div class="job">
             <div class="job-overview">
               <div class="employer-info small-12 large-6 columns">
@@ -159,8 +183,66 @@
               </ul>
             </div>
           </div>
+
+          <hr> 
+
+          <div class="job">
+            <div class="job-overview">
+              <div class="employer-info small-12 large-6 columns">
+                <h3><span>echoEleven</span></h3>
+              </div>
+              <div class="location small-12 medium-6 large-2 columns">Atlanta, GA </div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>October 2007 - November 2009</i></div>
+              <div class="small-12 columns">
+                <h4 class="job-title">ColdFusion, Flex/Flash Developer</h4>
+              </div>
+            </div> 
+
+            <div class="job-details small-12 columns">
+              <div>echoEleven was an eLearning company with a visual course building/launching technology, and was also an Adobe Authorized Training Center.</div>
+              <ul>
+                <li>Used Flex, ColdFusion, ActionScript and JavaScript on a large code base, managing interdependencies across applications and intricacies in the interfaces between those applications</li>
+                <li>Abstracted client-specific applications (e.g. reports, LMS, UI) as necessary to make those applications adaptable to different clients</li>
+                <li>Involved in implementing the whole lifecycle of a client's use of our course-building system, which included:</li>
+                <ul>
+                  <li>Developed courses for clients according to storyboards, creating course assets as needed</li>
+                  <li>Created the UI and the LMS (course delivery system) with a combination of Flex and Flash, skinning them with CSS to meet client's visual needs</li>
+                  <li>Set up their database usage and hosting of course assets</li>
+                  <li>Provided technical support and face-to-face training on the course development system</li>
+                  <li>Built Flash-based, XML-driven display widgets, customizable through a Flex editor</li>
+                  <li>Created dynamic course reporting and user management tools in Flex</li>
+                </ul>
+              </ul>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="job">
+            <div class="job-overview">
+              <div class="employer-info small-12 large-6 columns">
+                <h3><span>Pario, Inc.</span></h3>
+              </div>
+              <div class="location small-12 medium-6 large-2 columns">Atlanta, GA </div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>November 2005-October 2007</i></div>
+              <div class="small-12 columns">
+                <h4 class="job-title">Programmer/Flash Developer</h4>
+              </div>
+            </div>  
+
+            <div class="job-details small-12 columns">
+              <div>Pario, Inc. was an award-winning interactive communications, marketing and learning company.</div>
+              <ul>
+                <li>Developed engaging, adaptive learning interactivities for online educational courses</li>
+                <li>Provided ideas for user interface improvement during the design process, based on and backed up by established usability principles (Section 508 compatibility and W3C standards)</li>
+                <li>Created original artwork, animations and graphics to enrich the user's learning experience</li>
+                <li>Assisted in the development of a proprietary course-building application</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
+
     </div>
   </body>
 </html>
