--- a/resume/index.html
+++ b/resume/index.html
@@ -89,6 +89,13 @@
               <li>Part of major decisions, like url structure</li>
               <li>Got us to the first page of Google with changes</li>
               <li>Hired, mentored seasonal intern</li>
+              <li>Generally:</li>
+              <ul>
+                <li>Used GitHub</li>
+                <li>Switching from .net to Ruby on Rails platform</li>
+                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
+                <li></li>
+              </ul>
               <li></li>
             </ul>
           </div>
@@ -98,7 +105,7 @@
           <div class="job-details small-12 columns">
             <div><b>Awards (Do I need this section?)</b></div>
             <ul>
-              <li>Won several company-sponsored Hacakthons</li>
+              <li>Won several company-sponsored Hackathons</li>
               <ul>
                 <li>The project that gave people without expensive licenses the ability to read Mingle cards</li>
                 <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later)</li>
